font-size:0 on the parent fixes extra space issues with the block-grid without nasty tricks

--- a/scss/block-grid/_block-grid.scss
+++ b/scss/block-grid/_block-grid.scss
@@ -1,10 +1,12 @@
 .block-grid {
+  font-size: 0;
   margin: 0 -.5rem;
   padding: 0;
 }
 
 .block-grid-item {
   display: inline-block;
+  font-size: 1rem;
   padding: .5rem;
   vertical-align: top;
 }
